refactor: remove unused imports and format code