@@ -1,7 +1,6 @@
 package com.pragma.emason.application.mapper;
 
 import com.pragma.emason.application.dto.ItemRequestDTO;
-import com.pragma.emason.application.dto.ItemResponseDTO;
 import com.pragma.emason.domain.model.Brand;
 import com.pragma.emason.domain.model.Category;
 import com.pragma.emason.domain.model.Item;
@@ -9,8 +8,7 @@ import org.mapstruct.Mapper;
 import org.mapstruct.ReportingPolicy;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
+
 
 @Mapper(componentModel = "spring",
         unmappedTargetPolicy = ReportingPolicy.IGNORE,
@@ -19,13 +17,14 @@ public interface IItemRequestMapper {
 
 
     default Item toItemSet(ItemRequestDTO itemRequestDTO) {
+
         List<Category> categories = itemRequestDTO.getCategories().stream()
                 .map(name -> {
                     Category category = new Category();
                     category.setName(name);
                     return category;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         Brand brand = new Brand();
         brand.setName(itemRequestDTO.getBrandName());
